# poemarcut

./: .gitignore  README.md  currency.yaml  poe2marcut.py  poemarcut.py  pyinstaller.py  pyproject.toml  settings.yaml
.github/: copilot-instructions.md
.github/workflows/: github-releases-to-discord.yml
src/: poemarcut_cli.py  poemarcut_gui.py  pyinstaller.py  settings.yaml
src/poemarcut/: __init__.py  constants.py  currency.py  focus.py  item.py  keyboard.py  logic.py  settings.py  update.py  util.py
tests/: __init__.py  conftest.py  test_currency.py  test_focus.py  test_gui_league_selection.py  test_item_from_text.py  test_keyboard_extract_price.py  test_keyboard_focus_gate.py  test_price_logic.py  test_settings_leagues.py  test_settings_load.py  test_util.py
