[project]
name = "poemarcut"
version = "0.5.4"
description = "Tool to quickly reprice Path of Exile 1 and 2 merchant tab items by a set percentage"
authors = [{ name = "cdr", email = "58159483+cdrg@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyperclip (>=1.11.0,<2.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "pydirectinput (>=1.0.4,<2.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyqt6 (>=6.10.2,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "pyinstaller:install"

[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)"]

[tool.ruff.lint]
# ignore irrelevant lint warnings in tests
per-file-ignores = { "tests/*" = [
    "D100",    # "missing docstring in public module"
    "D101",    # "missing docstring in public class"
    "D102",    # "missing docstring in public method"
    "D103",    # "missing docstring in public function"
    "PLR2004", # "magic numbers"
    "S101",    # "assert"
] }
